--- a/assets/style/homePage.scss
+++ b/assets/style/homePage.scss
@@ -10,7 +10,7 @@
         display: flex;
         height: 35px;
         line-height: 35px;
-        h4{    
+        h4{
             font-family: 'Microsoft YaHei';
             font-weight: bold;
             font-size: 18px;
@@ -57,6 +57,8 @@
                         p{
                             position: absolute;
                             top: 0px;
+                            //height:36px;
+                            //line-height:36px;
                             color: #9D1518;
                             font-size: 24px;
                             font-weight: bold;
@@ -93,12 +95,12 @@
                             line-height:67px;
                             display:block;
                             cursor: pointer;
-                            white-space:nowrap; 
+                            white-space:nowrap;
                             overflow:hidden;
                             text-overflow:ellipsis;
                             font-weight: bold;
                             // margin-left: 10px;
-                            
+
                         }
                         .remark{
                             // display:none;
@@ -106,11 +108,11 @@
                             margin: 0 0 10px 0;
                             color: #aaaaaa;
                         }
-                    } 
+                    }
                     li:last-child{
                         border:none;
                     }
-                } 
+                }
             }
         }
         .m-list{
@@ -143,7 +145,7 @@
                         margin-right: 8%;
                     }
                 }
-                
+
                 .blue-line{
                     border: 2px solid #1c6ab3;
                     display: block;
@@ -177,7 +179,7 @@
                             width: 100%;
                             height: 85px;
                             overflow: hidden;
-                            text-overflow: ellipsis;  
+                            text-overflow: ellipsis;
                             display: -webkit-box;
                             -webkit-line-clamp: 4;
                         }
@@ -211,34 +213,34 @@
                     text-align: center;
                 }
                 // .video-ul{
-                //     display: inline-flex; 
+                //     display: inline-flex;
                 //     width: 100%;
                 //     ul{
                 //         width: 50%;
                 //         li{
-                //             background:url(../img/video-icon.jpg) no-repeat left center; 
-                //             margin-left: 10px; 
+                //             background:url(../img/video-icon.jpg) no-repeat left center;
+                //             margin-left: 10px;
                 //             padding-left: 15px;
                 //             line-height: 24px;
                 //             a {
-                //                 color: #c00; 
+                //                 color: #c00;
                 //                 text-decoration: none;
                 //                 font-size:15px;
                 //                 line-height:33px;
                 //                 display:block;
                 //                 cursor: pointer;
-                //                 white-space:nowrap; 
+                //                 white-space:nowrap;
                 //                 overflow:hidden;
                 //                 text-overflow:ellipsis;
                 //                 margin:0 5px;
                 //             }
                 //         }
-                //     } 
+                //     }
                 // }
-            }            
+            }
             .list-both-width{
                 width:32%;
-                margin:20px 10px 0 0;    
+                margin:20px 10px 0 0;
                 .sidepartList{
                     padding-left: 22px;
                     background: url(../img/number_ad1.jpg) no-repeat;
@@ -264,7 +266,7 @@
                             }
                         }
                     }
-                }  
+                }
                 .column-item{
                     border: 1px solid #ccc;
                     margin-top: 10px;
@@ -312,7 +314,7 @@
                                 left:50%;
                                 margin:-37.5px 0 0 -25px;
                                 opacity: 0.7;
-                            }    
+                            }
                             .icon-bofang:hover:before{
                                 opacity:1
                             }
@@ -353,7 +355,7 @@
                                         top:24px;
                                         left:65px;
                                         opacity: 0.7;
-                                    }    
+                                    }
                                     .icon-bofang:hover:before{
                                         opacity:1
                                     }
@@ -389,8 +391,8 @@
                                 margin-right:10px;
                             }
                         }
-                        
-                        
+
+
                         .life{
                             .ivu-col{
                                 margin-bottom: 10px;
@@ -413,7 +415,7 @@
                                 margin-right: 8%;
                             }
                         }
-                        
+
                         .culture{
                             margin-bottom: 10px;
                             li{
@@ -475,7 +477,7 @@
                             }
                         }
                     }
-                }         
+                }
             }
             // .list-both-width,.list-both-width-l{
             //     :last-child{
@@ -487,7 +489,7 @@
             display: inline-flex;
             width: 100%;
             .ads-l{
-                width: 64%; 
+                width: 64%;
                 margin-right: 1%;
             }
             .ads-r{
@@ -544,14 +546,14 @@
                     //font-weight: bold;
                     overflow: hidden;
                     text-overflow:ellipsis;
-                    white-space: nowrap;    
+                    white-space: nowrap;
                 }
                 dd{
                     margin-top: 2px;
                     padding: 0 8px;
                     line-height: 20px;
                     font-size: 12px;
-                    color: #27496e;       
+                    color: #27496e;
                 }
             }
             .textInfo-v{
@@ -567,9 +569,9 @@
             width: 100%;
         }
         .public-ul-li{
-            li {                
+            li {
                 display: grid;
-                white-space:nowrap; 
+                white-space:nowrap;
                 overflow:hidden;
                 text-overflow:ellipsis;
                 a{
@@ -579,12 +581,12 @@
                     display:block;
                     cursor: pointer;
                     margin:0 5px;
-                    white-space:nowrap; 
+                    white-space:nowrap;
                     overflow:hidden;
                     text-overflow:ellipsis;
                 }
             }
-            
+
         }
         .text4adlist{
             display: inline-grid;
@@ -597,15 +599,15 @@
                 background: url(../img/blue_ico.jpg)no-repeat left center;
                 overflow: hidden;
                 a{
-                    line-height: 26px; 
+                    line-height: 26px;
                     font-size: 13px;
                     color: #393939;
                 }
             }
         }
         .public-content{
-            display: inline-flex; 
-            width: 100%; 
+            display: inline-flex;
+            width: 100%;
             padding-left:10px;
             .public-content-l{
                 width: 49%;
@@ -619,7 +621,7 @@
             .gxgd1,.gxgd2,.gxgd3{
                 padding-bottom: 0px;
                 padding-top: 0px;
-                margin-bottom: 15px; 
+                margin-bottom: 15px;
                 height: 120px;
                 border-bottom: 1px dashed #ccc;
                 width: 100%;
@@ -642,7 +644,7 @@
                     padding-bottom: 10px;
                     line-height: 18px;
                 }
-            }            
+            }
             .gxgd3 {height: auto;}
             .public-list-img{
                 margin:0px 0 10px;
@@ -669,8 +671,8 @@
             .attention{
                 h4{
                     background: url(../img/attention_ico.jpg) no-repeat left center;
-                    height: 24px; 
-                    padding-left: 10px; 
+                    height: 24px;
+                    padding-left: 10px;
                     line-height: 24px;
                     font-size: 14px;
                     //font-weight: bold;
@@ -681,7 +683,7 @@
                     float: right;
                     color: #999;
                 }
-            } 
+            }
         }
         /**返回顶部**/
         .return-top{
@@ -690,7 +692,7 @@
             right:50%;
             margin-right:-700px;
         }
-        
+
         .f-friend{
             background-color: #eee;
             width: 1200px;
@@ -704,7 +706,7 @@
                     font-weight: bold;
                 }
             }
-        }  
+        }
     }
-    
+
 }
